--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,16 @@ body {
   margin: 0;
   padding: 0;
   max-width: 100vw;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   background-color: #000000;
   font-family: "Archivo Narrow", sans-serif;
+  
+}
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 .App {
