--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,20 +7,56 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    z-index: 1;
+    z-index: 10;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
+    /* gap: 1rem; */
 }
 
 .social-link{
     color: white;
-    font-size: 1.3rem;
+    /* font-size: 1.3rem; */
 }
 
 .email{
-    margin: 0 3rem 0 0;
+    /* margin: 0 3rem 0 0; */
     letter-spacing: 1px;
 }
 
+
+@media screen and (max-width:600px){
+    .footer{
+        gap: 0.4rem;
+    }
+    .social-link{
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 900px) and (min-width: 600px){
+    .footer{
+        gap: 0.5rem;
+    }
+    .social-link{
+        font-size: 1.1rem;
+    }
+}
+
+@media screen and (max-width: 1280px) and (min-width: 900px){
+    .footer{
+        gap: 0.7rem;
+    }
+    .social-link{
+        font-size: 1.2rem;
+    }
+}
+
+@media screen and (min-width:1280px){
+    .footer{
+        gap: 1rem;
+    }
+    .social-link{
+        font-size: 1.3rem;
+    }
+}
