--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,97 +1,124 @@
-.navbar{
-  max-width: 100vw;
+.navbar {
+  max-width: 100%;
   height: 3.2rem;
-  padding: 0 5rem 0;
   letter-spacing: 1px;
   text-transform: uppercase;
   background-color: #000000;
   color: white;
-  border-bottom: 1px solid rgba(255,255,255,0.2);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: sticky;
-  z-index: 1;
+  z-index: 10;
   left: 0;
   top: 0;
+  overflow: hidden;
 }
 
-.name{
-  font-size: 1.5rem;
+.name {
   font-weight: 700;
 }
 
-.navbar ul{
+.navbar ul {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 2rem;
   list-style: none;
 }
 
-.nav-links{
+.nav-links {
   position: relative;
   cursor: pointer;
-  /* color: white; */
-  color: #B5A896;
+  color: #b5a896;
   text-decoration: none;
   display: inline-block;
   transition: width 0.4s ease, left 0.4s ease;
 }
 
-.active{
+.nav-links:hover {
   color: #907659;
-  border-bottom: 1px solid #907659;
-}
-
-.nav-links:hover{
-  color: #907659;
-  border-bottom: 1px solid #907659;
-  transition: all 0.4s ease;
+  transition: all 0.3s ease;
   width: 100%;
 }
 
-@media(max-width:576px){
-  .navbar{
-    max-width: 100%;
+@media screen and (max-width: 600px) {
+  .navbar {
+    width: 100vw;
     padding: 0 1rem;
+    position: fixed;
+    left: 0;
+    top: 0;
   }
-  .name{
+  .name {
     font-size: 1rem;
   }
-  .navbar ul{
+  .navbar ul {
     gap: 1rem;
   }
-  .nav-links{
+  .nav-links {
+    font-size: 0.6rem;
+  }
+}
+
+@media screen and (max-width:900px) and (min-width:600px){
+  .navbar {
+    width: 100vw;
+    /* max-width: 100vw; */
+    padding: 0 2rem;
+    position: fixed;
+    left: 0;
+    top: 0;
+  }
+  .name {
+    font-size: 1rem;
+  }
+  .navbar ul {
+    gap: 1rem;
+  }
+  .nav-links {
     font-size: 0.8rem;
   }
 }
 
-@media(min-width:576px){
-  .navbar{
-    max-width: 100%;
-    padding: 0 2rem;
+@media screen and (max-width:1280px) and (min-width:900px){
+  .navbar {
+    /* min-width: 1000px; */
+    /* max-width: 1280px; */
+    width: 100vw;
+    padding: 0 1rem;
+    position: fixed;
+    left: 0;
+    top: 0;
   }
-  .name{
-    font-size: 1.2rem;
+  .name {
+    font-size: 1.5rem;
   }
-  .navbar ul{
-    gap: 1.1rem;
+  .navbar ul {
+    gap: 1rem;
   }
-  .nav-links{
+  .nav-links {
     font-size: 0.8rem;
   }
 }
 
-@media(min-width:768px){
-  .navbar{
-    max-width: 100vw;
-    padding: 0 2rem;
+@media screen and (min-width:1280px){
+  .navbar {
+    /* min-width: 1280px; */
+    /* max-width: 1400px; */
+    width: 100vw;
+    padding: 0 1rem;
+    position: fixed;
+    left: 0;
+    top: 0;
   }
-  .name{
-    font-size: 1.2rem;
+  .name {
+    font-size: 1.5rem;
   }
-  .nav-links{
-    font-size: 0.9rem;
+  .navbar ul {
+    gap: 1rem;
+  }
+  .nav-links {
+    font-size: 0.8rem;
   }
 }
