--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,99 +1,467 @@
-.projects{
-  width: 100vw;
-  position: relative;
-  /* min-height: 15rem; */
-  /* max-height: fit-content; */
-  /* height: fit-content; */
+.projectspage {
+  max-width: 100vw;
+  /* height: 30rem; */
   color: white;
-  margin: 0 0 2rem;
-  padding: 0;
-  /* position: absolute; */
-  /* top: 97vh; */
-  /* overflow: hidden; */
-
+  position: relative;
+  /* top: 93vh; */
+  overflow: hidden;
+  /* border: 1px solid white; */
 }
 
-.project-title{
-  width: 100vw;
-  /* position: relative; */
-  /* display: flex; */
-  justify-content: center;
-  align-items: center;
+.projectspage-new {
+  max-width: 100vw;
+  height: 50rem;
+  color: white;
+  position: relative;
+  top: 93vh;
+}
+
+.projectspage-new .projectspage-inner {
+  filter: blur(5px);
+  pointer-events: none;
+}
+
+body.modal-open {
+  overflow: hidden;
+}
+
+.project-title {
+  color: rgba(255, 255, 255, 0.09);
+  position: absolute;
+  /* top: 0.5rem; */
+  /* left: 37rem; */
   text-transform: uppercase;
-  /* margin: 2.5rem 0 0; */
-}
-
-.project-title h1{
-  /* position: absolute; */
-  color: rgba(255,255,255,0.1);
-  font-size: 4rem;
+  /* font-size: 4rem; */
   font-weight: 700;
-  /* margin: 0; */
+  margin: 0;
 }
 
-.project-title h3{
+.small-project-title {
   position: absolute;
-  font-size: 2rem;
-  font-weight: bolder;
-  color: #BEA887;
-  z-index: 1;
-  letter-spacing: 0.5rem;
-  margin: 0.4rem 0 0 0.1rem;
+  /* left: 40.9rem; */
+  /* top: 0.8rem; */
+  font-size: 1.8rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  color: #b5a896;
 }
 
-.project-cards-div{
-  width: 100vw;
+.projectspage-inner {
+  display: flex;
+  /* align-items: center; */
   position: absolute;
-  top: 6rem;
+  /* top: 6rem; */
+  /* left: 10rem; */
+}
+
+.project-left {
+  /* width: 10rem; */
+  height: fit-content;
   display: flex;
   flex-direction: column;
-  gap: 4rem;
-  align-items: center;
-  justify-content: center;
+  /* gap: 1rem; */
+  /* margin: 1rem; */
 }
 
-.frameworks{
-  display: flex;
-  gap: 2rem;
-}
-
-.fw{
-  border: none;
-  font-weight: 400;
+.project-left button {
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  /* width: 10rem; */
   height: 2rem;
-  display: flex;
-  align-items: center;
-  background: transparent;
-  cursor: pointer;
-  /* border-bottom: 0; */
-  text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 2px;
   color: white;
-  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.project-right {
+  display: grid;
+  /* grid-template-columns: repeat(5, 1fr); */
+  /* column-gap: 0.8rem; */
+  /* row-gap: 2rem; */
+  justify-content: center;
+  /* align-items: center; */
+  margin: 0 2rem 0 0;
+}
+
+.modal-button {
+  /* width: 12rem; */
+  /* height: 3rem; */
+  cursor: pointer;
+  padding: 0 0.5rem;
+  border: 1px solid white;
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
   transition: all 0.3s ease;
 }
 
-.fw:hover{
-  color: #BEA887;
+.modal-button:hover {
+  background-color: #907659;
+  border: 1px solid #907659;
+  transition: all 0.3s ease;
 }
 
-.frameworks.active{
-  border-bottom: 1px solid #BEA887;
+.modal {
+  border: 1px solid white;
+  z-index: 1;
+  filter: blur(0px);
+  position: fixed;
+  /* top: 10rem; */
+  /* left: 27rem; */
+  /* width: 35rem; */
+  height: 20rem;
+  background-color: black;
 }
 
-.project-cards{
-  margin: 0 0 5rem;
-}
-
-.project-cards-inner{
-  width: 100vw;
+.modal button {
+  /* width: 3rem; */
+  /* height: 3rem; */
+  margin: 0;
+  float: right;
   color: white;
-  display: grid;
-  grid-template-columns: 20rem 20rem 20rem 20rem;
-  /* grid-template-columns: 1fr 1fr 1fr 1fr; */
-  column-gap: 2rem;
-  row-gap: 2rem;
-  justify-content: center;
+  background-color: black;
+  border: none;
+  cursor: pointer;
+}
+
+.modal-data {
+  width: inherit;
+  /* height: 17rem; */
+  margin: 0;
+  padding: 0;
+  /* border: 1px solid white; */
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
   align-items: center;
+  /* justify-content: center; */
+}
+
+.modal-title {
+  /* font-size: 2rem; */
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  word-spacing: 5px;
+  margin: 1rem 0 0;
+}
+
+.modal-desc {
+  /* font-size: 1rem; */
+  font-weight: lighter;
+  text-align: justify;
+  margin: 0;
+  /* width: 30rem; */
+}
+
+.repo-link {
+  text-decoration: none;
+  color: white;
+  font-size: 1rem;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  padding: 0.5rem 2rem;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  /* margin: 1rem 0 0; */
+}
+
+.repo-link:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+/* 380, 700, 1000, 1281  */
+
+@media screen and (max-width: 600px) {
+  .projectspage {
+    top: 80vh;
+    height: 30rem;
+    /* overflow: hidden; */
+    /* border: 1px solid white; */
+  }
+
+  .project-title {
+    top: 0.5rem;
+    left: 4rem;
+    font-size: 3.5rem;
+  }
+  .small-project-title {
+    top: 0.5rem;
+    left: 6.8rem;
+  }
+  .projectspage-inner {
+    top: 5.5rem;
+    left: 1.3rem;
+    gap: 1.5rem;
+    flex-direction: column;
+  }
+  .project-left {
+    width: 100vw;
+    gap: 0.5rem;
+    margin: 0;
+    flex-direction: row;
+  }
+  .project-left button {
+    width: 3.85rem;
+    font-size: 0.8rem;
+  }
+  .project-right {
+    /* display: grid; */
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 0.5rem;
+    row-gap: 1rem;
+  }
+  .modal-button {
+    width: 10rem;
+    height: 2rem;
+    font-size: 0.7rem;
+  }
+  .modal {
+    top: 7rem;
+    left: 1.85rem;
+    width: 20rem;
+  }
+  .modal button {
+    width: 2rem;
+    height: 2rem;
+  }
+  .modal-data {
+    /* border: 1px solid white; */
+    height: 17rem;
+  }
+  .modal-title {
+    font-size: 1.35rem;
+  }
+  .modal-desc {
+    font-size: 0.9rem;
+    width: 17rem;
+  }
+  .repo-link {
+    margin: 0.5rem 0 0;
+  }
+}
+
+@media screen and (max-width: 900px) and (min-width: 600px) {
+  .projectspage {
+    top: 35rem;
+    height: 30rem;
+    overflow: hidden;
+    /* border: 1px solid white; */
+  }
+
+  .project-title {
+    top: 0.5rem;
+    left: 21rem;
+    font-size: 3.5rem;
+  }
+  .small-project-title {
+    top: 0.5rem;
+    left: 23.8rem;
+  }
+  .projectspage-inner {
+    top: 5.5rem;
+    left: 8rem;
+    gap: 1.5rem;
+    width: 40rem;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    /* border: 1px solid white; */
+  }
+  .project-left {
+    width: 50vw;
+    margin: 0;
+    gap: 1rem;
+    flex-direction: row;
+  }
+  .project-left button {
+    width: 4.5rem;
+    font-size: 0.8rem;
+  }
+  .project-right {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+    row-gap: 1rem;
+  }
+  .modal-button {
+    width: 12rem;
+    height: 2rem;
+    font-size: 0.8rem;
+  }
+  .modal {
+    top: 20rem;
+    left: 13rem;
+    width: 25rem;
+    height: 20rem;
+  }
+  .modal button {
+    width: 2rem;
+    height: 2rem;
+  }
+  .modal-data {
+    /* border: 1px solid white; */
+    height: 17rem;
+  }
+  .modal-title {
+    font-size: 1.5rem;
+  }
+  .modal-desc {
+    font-size: 0.95rem;
+    width: 18rem;
+  }
+  .repo-link {
+    margin: 0.5rem 0 0;
+  }
+}
+
+@media screen and (max-width:1280px) and (min-width:900px){
+  /* theres an error in the top value so fix it */
+  .projectspage {
+    top: 5rem;
+    height: 30rem;
+    overflow: hidden;
+    /* border: 1px solid white; */
+  }
+
+  .project-title {
+    top: 0.5rem;
+    left: 31rem;
+    font-size: 3.5rem;
+  }
+  .small-project-title {
+    top: 0.5rem;
+    left: 33.8rem;
+  }
+  .projectspage-inner {
+    top: 5.5rem;
+    left: 6rem;
+    gap: 1.5rem;
+    width: 60rem;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    /* border: 1px solid white; */
+  }
+  .project-left {
+    width: 50vw;
+    margin: 0;
+    gap: 1rem;
+    flex-direction: row;
+  }
+  .project-left button {
+    width: 6rem;
+    height: 2.5rem;
+    font-size: 1rem;
+  }
+  .project-right {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 1rem;
+    row-gap: 1rem;
+  }
+  .modal-button {
+    width: 13rem;
+    height: 3rem;
+    font-size: 1rem;
+  }
+  .modal {
+    top: 45rem;
+    left: 13rem;
+    width: 30rem;
+    height: 20rem;
+  }
+  .modal button {
+    width: 3rem;
+    height: 3rem;
+    font-size: 1.5rem;
+  }
+  .modal-data {
+    border: 1px solid white;
+    height: 17rem;
+  }
+  .modal-title {
+    font-size: 2rem;
+  }
+  .modal-desc {
+    font-size: 1rem;
+    width: 22rem;
+  }
+  .repo-link {
+    margin: 0.5rem 0 0;
+  }
+}
+
+@media screen and (min-width:1280px){
+  .projectspage {
+    top: 93vh;
+    height: 40rem;
+    overflow: hidden;
+    /* border: 1px solid white; */
+  }
+
+  .project-title {
+    top: 0.5rem;
+    left: 40rem;
+    font-size: 3.5rem;
+  }
+  .small-project-title {
+    top: 0.5rem;
+    left: 43rem;
+  }
+  .projectspage-inner {
+    top: 6rem;
+    left: 12rem;
+    gap: 1.5rem;
+    width: 70rem;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    /* border: 1px solid white; */
+  }
+  .project-left {
+    width: 60vw;
+    margin: 0;
+    gap: 1rem;
+    flex-direction: row;
+  }
+  .project-left button {
+    width: 15rem;
+    height: 3rem;
+    font-size: 1.2rem;
+  }
+  .project-right {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+    row-gap: 1rem;
+  }
+  .modal-button {
+    width: 20rem;
+    height: 3.5rem;
+    font-size: 1.2rem;
+  }
+  .modal {
+    top: 14rem;
+    left: 35rem;
+    width: 25rem;
+    height: 20rem;
+  }
+  .modal button {
+    width: 3rem;
+    height: 3rem;
+  }
+  .modal-data {
+    /* border: 1px solid white; */
+    height: 17rem;
+  }
+  .modal-title {
+    font-size: 1.5rem;
+  }
+  .modal-desc {
+    font-size: 0.95rem;
+    width: 18rem;
+  }
+  .repo-link {
+    margin: 0.5rem 0 0;
+  }
 }
