--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,6 +1,6 @@
 .projectspage {
   max-width: 100vw;
-  /* height: 30rem; */
+  height: 30rem;
   color: white;
   position: relative;
   /* top: 93vh; */
@@ -206,7 +206,9 @@ body.modal-open {
   }
   .project-right {
     /* display: grid; */
-    grid-template-columns: repeat(2, 1fr);
+    /* grid-template-columns: repeat(2, 1fr); */
+    display: flex;
+    flex-wrap: wrap;
     column-gap: 0.5rem;
     row-gap: 1rem;
   }
@@ -278,8 +280,10 @@ body.modal-open {
     font-size: 0.8rem;
   }
   .project-right {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    /* display: grid;
+    grid-template-columns: repeat(3, 1fr); */
+    display: flex;
+    flex-wrap: wrap;
     column-gap: 1rem;
     row-gap: 1rem;
   }
@@ -317,7 +321,7 @@ body.modal-open {
 @media screen and (max-width:1280px) and (min-width:900px){
   /* theres an error in the top value so fix it */
   .projectspage {
-    top: 5rem;
+    top: 38rem;
     height: 30rem;
     overflow: hidden;
     /* border: 1px solid white; */
@@ -354,8 +358,10 @@ body.modal-open {
     font-size: 1rem;
   }
   .project-right {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    /* display: grid;
+    grid-template-columns: repeat(4, 1fr); */
+    display: flex;
+    flex-wrap: wrap;
     column-gap: 1rem;
     row-gap: 1rem;
   }
@@ -394,7 +400,7 @@ body.modal-open {
 @media screen and (min-width:1280px){
   .projectspage {
     top: 93vh;
-    height: 40rem;
+    height: 32rem;
     overflow: hidden;
     /* border: 1px solid white; */
   }
@@ -430,8 +436,10 @@ body.modal-open {
     font-size: 1.2rem;
   }
   .project-right {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    /* display: grid; */
+    /* grid-template-columns: repeat(3, 1fr); */
+    display: flex;
+    flex-wrap: wrap;
     column-gap: 1rem;
     row-gap: 1rem;
   }
