--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,6 +8,7 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   display: flex;
   justify-content: space-between;
+  /* justify-content: center; */
   align-items: center;
   position: sticky;
   z-index: 10;
@@ -42,7 +43,7 @@
   width: 100%;
 }
 
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
   .navbar {
     width: 100vw;
     padding: 0 1rem;
@@ -64,7 +65,7 @@
 @media screen and (max-width:900px) and (min-width:600px){
   .navbar {
     width: 100vw;
-    /* max-width: 100vw; */
+    /* max-width: 100vw; 
     padding: 0 2rem;
     position: fixed;
     left: 0;
@@ -83,8 +84,8 @@
 
 @media screen and (max-width:1280px) and (min-width:900px){
   .navbar {
-    /* min-width: 1000px; */
-    /* max-width: 1280px; */
+    /* min-width: 1000px; 
+    /* max-width: 1280px; 
     width: 100vw;
     padding: 0 1rem;
     position: fixed;
@@ -104,8 +105,8 @@
 
 @media screen and (min-width:1280px){
   .navbar {
-    /* min-width: 1280px; */
-    /* max-width: 1400px; */
+    /* min-width: 1280px; 
+    /* max-width: 1400px; 
     width: 100vw;
     padding: 0 1rem;
     position: fixed;
@@ -120,5 +121,22 @@
   }
   .nav-links {
     font-size: 0.8rem;
+  }
+} */
+
+@media (min-width:320px) and (max-width:480px){
+  .navbar{
+    width: 100%;
+    padding: 0 0.5rem;
+    /* position: sticky; */
+  }
+  .name{
+    font-size: 0.5rem;
+  }
+  .navbar ul{
+    gap: 0.4rem;
+  }
+  .nav-links{
+    font-size: 0.5rem;
   }
 }
