--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -43,7 +43,7 @@
   width: 100%;
 }
 
-/* @media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   .navbar {
     width: 100vw;
     padding: 0 1rem;
@@ -62,10 +62,10 @@
   }
 }
 
-@media screen and (max-width:900px) and (min-width:600px){
+@media screen and (max-width: 900px) and (min-width: 600px) {
   .navbar {
     width: 100vw;
-    /* max-width: 100vw; 
+    /* max-width: 100vw;  */
     padding: 0 2rem;
     position: fixed;
     left: 0;
@@ -82,10 +82,10 @@
   }
 }
 
-@media screen and (max-width:1280px) and (min-width:900px){
+@media screen and (max-width: 1280px) and (min-width: 900px) {
   .navbar {
-    /* min-width: 1000px; 
-    /* max-width: 1280px; 
+    /* min-width: 1000px;  */
+    /* max-width: 1280px;  */
     width: 100vw;
     padding: 0 1rem;
     position: fixed;
@@ -103,12 +103,12 @@
   }
 }
 
-@media screen and (min-width:1280px){
+@media screen and (min-width: 1280px) {
   .navbar {
-    /* min-width: 1280px; 
-    /* max-width: 1400px; 
+    /* min-width: 1280px;  */
+    /* max-width: 1400px;  */
     width: 100vw;
-    padding: 0 1rem;
+    padding: 0 3rem;
     position: fixed;
     left: 0;
     top: 0;
@@ -117,26 +117,26 @@
     font-size: 1.5rem;
   }
   .navbar ul {
-    gap: 1rem;
+    gap: 1.2rem;
   }
   .nav-links {
-    font-size: 0.8rem;
+    font-size: 1rem;
   }
-} */
+}
 
-@media (min-width:320px) and (max-width:480px){
-  .navbar{
+@media (min-width: 320px) and (max-width: 480px) {
+  .navbar {
     width: 100%;
     padding: 0 0.5rem;
     /* position: sticky; */
   }
-  .name{
+  .name {
     font-size: 0.5rem;
   }
-  .navbar ul{
+  .navbar ul {
     gap: 0.4rem;
   }
-  .nav-links{
+  .nav-links {
     font-size: 0.5rem;
   }
 }
