--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,4 +1,4 @@
-.contact{
+.contact {
   position: relative;
   max-width: 100vw;
   top: 42.5rem;
@@ -8,10 +8,10 @@
   /* border: 1px solid white; */
 }
 
-.contact-title{
+.contact-title {
   font-size: 4rem;
   text-transform: uppercase;
-  color: rgba(255,255,255,0.09);
+  color: rgba(255, 255, 255, 0.09);
   /* color: rgba(144, 118, 89, 0.2); */
   font-weight: 700;
   position: absolute;
@@ -20,7 +20,7 @@
   margin: 0;
 }
 
-.small-contact-title{
+.small-contact-title {
   position: absolute;
   left: 41.9rem;
   top: 1rem;
@@ -31,7 +31,7 @@
   color: #b5a896;
 }
 
-.contact-form{
+.contact-form {
   width: 40rem;
   /* height: 25rem; */
   height: 10rem;
@@ -44,7 +44,7 @@
   align-items: center;
 }
 
-.form-title{
+.form-title {
   font-size: 1.2rem;
   font-weight: 400;
   letter-spacing: 2px;
@@ -53,7 +53,9 @@
   color: #907659;
 }
 
-.first, .second, .third{
+.first,
+.second,
+.third {
   width: inherit;
   height: 6rem;
   /* border: 1px solid white; */
@@ -63,7 +65,7 @@
   /* gap: 2rem; */
 }
 
-.display-form{
+.display-form {
   width: 38rem;
   display: flex;
   /* align-items: flex-start; */
@@ -71,28 +73,28 @@
   flex-direction: column;
 }
 
-.display-form label{
+.display-form label {
   font-size: 1.2rem;
 }
 
-.display-form input{
+.display-form input {
   width: 19rem;
   height: 3rem;
-  background-color: rgba(255,255,255,0.1);
+  background-color: rgba(255, 255, 255, 0.1);
   color: white;
   border: none;
 }
 
-.display-form textarea{
+.display-form textarea {
   width: 38rem;
   height: 5rem;
-  background-color: rgba(255,255,255,0.1);
+  background-color: rgba(255, 255, 255, 0.1);
   border: none;
 }
 
-.submit-btn{
+.submit-btn {
   font-size: 1.1rem;
-  border: 1px solid rgba(255,255,255,0.2);
+  border: 1px solid rgba(255, 255, 255, 0.2);
   padding: 0.8rem 4rem;
   text-transform: uppercase;
   cursor: pointer;
@@ -102,7 +104,43 @@
   margin: 1rem 0 0 0;
 }
 
-.submit-btn:hover{
+.submit-btn:hover {
   background-color: #907659;
   border: 1px solid #907659;
+}
+
+@media screen and (max-width: 600px) {
+  .contact {
+    top: 27rem;
+    max-width: screen;
+  }
+  .contact-title {
+    font-size: 3rem;
+    left: 4.5rem;
+  }
+  .small-contact-title {
+    font-size: 1.5rem;
+    left: 7.8rem;
+    top: 0.5rem;
+  }
+  .contact-form {
+    width: 20rem;
+    left: 3rem;
+  }
+}
+
+@media screen and (max-width: 1280px) and (min-width: 900px) {
+  .contact {
+    top: 31rem;
+    max-width: screen;
+  }
+  .contact-title {
+    left: 25rem;
+  }
+  .small-contact-title {
+    left: 30rem;
+  }
+  .contact-form {
+    left: 16rem;
+  }
 }
