--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -83,11 +83,12 @@
   /* phone screen */
   .homepage {
     max-width: 600px;
+    /* height: 10rem; */
   }
   .home-right,
   .home-right img {
     width: 30rem;
-    height: 30rem;
+    height: 25rem;
     z-index: 0;
   }
   .home-left {
