--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -173,7 +173,7 @@ body.modal-open {
 
 @media screen and (max-width: 600px) {
   .projectspage {
-    top: 80vh;
+    top: 55vh;
     height: 30rem;
     /* overflow: hidden; */
     /* border: 1px solid white; */
@@ -318,7 +318,7 @@ body.modal-open {
   }
 }
 
-@media screen and (max-width:1280px) and (min-width:900px){
+@media screen and (max-width: 1280px) and (min-width: 900px) {
   /* theres an error in the top value so fix it */
   .projectspage {
     top: 38rem;
@@ -329,12 +329,13 @@ body.modal-open {
 
   .project-title {
     top: 0.5rem;
-    left: 31rem;
+    left: 28rem;
+    /* margin: auto auto; */
     font-size: 3.5rem;
   }
   .small-project-title {
     top: 0.5rem;
-    left: 33.8rem;
+    left: 30.8rem;
   }
   .projectspage-inner {
     top: 5.5rem;
@@ -397,7 +398,7 @@ body.modal-open {
   }
 }
 
-@media screen and (min-width:1280px){
+@media screen and (min-width: 1280px) {
   .projectspage {
     top: 93vh;
     height: 32rem;
